--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 spring:
   application:
     name: ai_projects
+  datasource:
+    url: jdbc:postgresql://localhost:5433/ai_projects_db
+    username: rtb
+    password: rtb_temp_12345
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 ai:
   api:
