--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'com.google.genai:google-genai:1.0.0'
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
 
     runtimeOnly 'org.postgresql:postgresql'
 
