feat: added cheatsheet generator

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
 
+    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
+    implementation 'com.openhtmltopdf:openhtmltopdf-core:1.0.10'
+
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
