--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: ai_projects
   datasource:
-    url: ${DB_URL:jdbc:postgresql://localhost:5433/ai_projects_db}
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/ai_projects_db}
     username: rtb
     password: rtb_temp_12345
     driver-class-name: org.postgresql.Driver
@@ -15,6 +15,7 @@ spring:
 ai:
   api:
     key: ${GEMINI_API_KEY}
+    model: ${GEMINI_MODEL:gemini-2.5-flash-lite}
 server:
   port: 7070
 
