--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,13 +3,15 @@ services:
     build:
       context: ../
       dockerfile: docker/Dockerfile
-    image: ai-backend:v1.0.0
+    image: rkumar0206/ai-backend:v1.0.0
     container_name: ai-backend
     env_file:
       - .env
     environment:
       DB_URL: 'jdbc:postgresql://ai-db:5432/ai_projects_db'
       GEMINI_API_KEY: ${GEMINI_API_KEY}
+      MODEL: ${MODEL}
+      ALLOWED_ORIGINS: ${ALLOWED_ORIGINS}
     ports:
       - "7070:7070"
     depends_on:
@@ -21,7 +23,7 @@ services:
     build:
       context: ./db
       dockerfile: Dockerfile
-    image: ai-db:v1.0.0
+    image: rkumar0206/ai-db:v1.0.0
     container_name: ai-db
     env_file:
       - .env
