--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: ai_projects
   datasource:
     url: ${DB_URL:jdbc:postgresql://localhost:5432/ai_projects_db}
-    username: rtb
-    password: rtb_temp_12345
+    username: ${POSTGRES_USER:rtb}
+    password: ${POSTGRES_PASSWORD:rtb_temp_12345}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
@@ -19,7 +19,7 @@ ai:
 server:
   port: 7070
 
-allowedOrigins: http://localhost:4200  # frontend host url
+allowedOrigins: ${ALLOWED_ORIGINS:http://localhost:4200}  # frontend host url
 
 management:
   endpoints:
